[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "producthunt-scraper"
version = "0.1.0"
description = "Python SDK for the ProductHunt Scraper Apify actor — upvotes, reviews, makers, hunter, topics, gallery, badges, ranking, tech stack signals, sentiment, velocity, competitor analysis. Five modes: URLs, leaderboard, search, maker portfolio, topic."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ApiVault Labs" }]
keywords = [
    "producthunt", "product-hunt", "producthunt-scraper", "producthunt-api",
    "producthunt-leaderboard", "producthunt-search", "producthunt-maker",
    "startup-research", "startup-intelligence", "product-launch-tracker",
    "upvote-tracker", "tech-stack-detection", "competitor-analysis",
    "trend-monitoring", "launch-monitoring", "maker-portfolio",
    "web-scraping", "apify", "apify-actor", "python-sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apivault-labs/producthunt-scraper-python"
Documentation = "https://github.com/apivault-labs/producthunt-scraper-python#readme"
"Apify Actor" = "https://apify.com/apivault_labs/producthunt-scraper"
"Bug Tracker" = "https://github.com/apivault-labs/producthunt-scraper-python/issues"

[tool.setuptools.packages.find]
include = ["producthunt_scraper*"]
